--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -52,6 +52,8 @@ Main Components
 }
 
 .schedule-calendar-detail-item{
+  max-width: 100%;
+  max-height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
