--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -580,15 +580,15 @@ Main Components
 //  }
 //}
 //
-//.cd-schedule.modal-is-open .event-modal {
-//  /* .modal-is-open class is added as soon as an event is selected */
+//.cd-schedule.modal-is-show .event-modal {
+//  /* .modal-is-show class is added as soon as an event is selected */
 //  -webkit-transform: translateX(0);
 //  -ms-transform: translateX(0);
 //  transform: translateX(0);
 //  visibility: visible;
 //}
 //
-//.cd-schedule.modal-is-open .event-modal .event-info > div {
+//.cd-schedule.modal-is-show .event-modal .event-info > div {
 //  /* smooth scroll on iOS touch devices */
 //  -webkit-overflow-scrolling: touch;
 //}
@@ -602,7 +602,7 @@ Main Components
 //    -webkit-transition: opacity .2s;
 //    transition: opacity .2s;
 //  }
-//  .cd-schedule.modal-is-open .body-bg {
+//  .cd-schedule.modal-is-show .body-bg {
 //    opacity: 1;
 //    -webkit-transition: -webkit-transform .4s;
 //    transition: -webkit-transform .4s;
@@ -628,7 +628,7 @@ Main Components
 //  transition: opacity .4s, visibility .4s;
 //}
 //
-//.cd-schedule.modal-is-open .cover-layer {
+//.cd-schedule.modal-is-show .cover-layer {
 //  opacity: 1;
 //  visibility: visible;
 //}
