for today, month, stacks. Route bug

--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -287,6 +287,7 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
       display: none;
       position: relative;
       top: 2px;
+      cursor: pointer;
     }
     b {
       display: block;
@@ -297,6 +298,7 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
       font-size: 13px;
       font-weight: 500;
       line-height: 13px;
+      cursor: pointer;
     }
   }
 }
