--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -79,6 +79,18 @@
 @img-message-small: data-uri('../img/message-small.svg');
 @img-delete-icon: data-uri('../img/delete-icon.svg');
 @img-green-bell: data-uri('../img/green-bell.svg');
+@img-grey-bell: data-uri('../img/grey-bell.svg');
 @img-green-comment: data-uri('../img/green-comment.svg');
+@img-grey-comment: data-uri('../img/grey-comment.svg');
+
+@img-clock-iso-end: data-uri('../img/clock_ico_end.svg');
+@img-clock-iso-start: data-uri('../img/clock_ico_start.svg');
+@img-clock-KYC: data-uri('../img/clock_KYC.svg');
+@img-clock-white-list: data-uri('../img/clock_white_list.svg');
+@img-clock-pre-iso: data-uri('../img/clock_KYC.svg');
+
+@img-sync: data-uri('../img/sync.svg');
+//@img-clock-pre-iso: data-uri('../img/clock_pre_ico.svg');
+
 
 //@img-aurora-logo: data-uri('../img/aurora-logo.svg');
