--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -89,6 +89,11 @@
 @img-clock-white-list: data-uri('../img/clock_white_list.svg');
 @img-clock-pre-iso: data-uri('../img/clock_KYC.svg');
 
+@img-view_1: data-uri('../img/view_1.svg');
+@img-view_1-active: data-uri('../img/view_1_active.svg');
+@img-view_2: data-uri('../img/view_2.svg');
+@img-view_2-active: data-uri('../img/view_2_active.svg');
+
 @img-sync: data-uri('../img/sync.svg');
 //@img-clock-pre-iso: data-uri('../img/clock_pre_ico.svg');
 
