fixes,timer. calendar layout

--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -5,7 +5,24 @@
 
 @nice-blue: #5B83AD;
 @light-blue: @nice-blue + #111;
-
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('@{path-fonts}/Roboto/Roboto-regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('@{path-fonts}/Roboto/Roboto-Bold.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto', sans-serif;
+  src: url('@{path-fonts}/Roboto/Roboto-regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* --------------------------------
 Primary style
