--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -10,7 +10,7 @@
 @white-list: #ff819e;
 @start-ico: #44af36;
 
-
+@path-fonts: '../fonts';
 
 @main-font :'Roboto', sans-serif;
 
@@ -95,6 +95,10 @@
 @img-view_2-active: data-uri('../img/view_2_active.svg');
 
 @img-sync: data-uri('../img/sync.svg');
+
+@img-calendar-white: data-uri('../img/calendar_white.svg');
+@img-calendar-approved: data-uri('../img/calendar_approved.svg');
+@img-bell-white: data-uri('../img/bell_white.svg');
 //@img-clock-pre-iso: data-uri('../img/clock_pre_ico.svg');
 
 
