--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -83,6 +83,9 @@
 @img-green-comment: data-uri('../img/green-comment.svg');
 @img-grey-comment: data-uri('../img/grey-comment.svg');
 
+@img-clock-end: data-uri('../img/clock_end.svg');
+@img-clock-start: data-uri('../img/clock_start.svg');
+
 @img-clock-iso-end: data-uri('../img/clock_ico_end.svg');
 @img-clock-iso-start: data-uri('../img/clock_ico_start.svg');
 @img-clock-KYC: data-uri('../img/clock_KYC.svg');
