--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -36,6 +36,8 @@ body {
   font-family: @main-font;
   font-size: 12px;
   color: #000;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 .container-fluid {
   max-width: 1280px;
@@ -524,41 +526,12 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
     }
   }
 }
-//============================Language ===========================//
-.language {
-  z-index: 22;
-  &_current,
-  &-header_current {
-    position: relative;
-    display: inline-block;
-    margin-bottom: 5px;
-    &::before {
-      content: "";
-      position: absolute;
-      width: 8px;
-      height: 4px;
-      left: 23px;
-      top: 9px;
-      background-image: @img-select-arrow;
-      background-position: center;
-      background-repeat: no-repeat;
-      z-index: 11;
-    }
-  }
-  &_list,
-  &-header_list {
-    display: none;
-    &-item {
-      margin-bottom: 5px;
-    }
-  }
-}
+
 //============================Timeline ===========================//
 .timeline {
   margin-top: 32px;
   margin-bottom: 32px;
   padding-bottom: 12px;
-  overflow: hidden;
   position: relative;
   &_top-line {
     display: flex;
@@ -700,6 +673,11 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
     align-items: center;
     align-content: stretch;
     height: 100%;
+    &:active,
+    &:focus,
+    &:hover {
+      box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.15);
+    }
     &--item{
       cursor: pointer;
     }
@@ -815,7 +793,63 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
       //  background-size: contain;
       //}
     }
+    &--pre_ico {
+      position: relative;
+      background-color: rgba(247, 152, 27, 0.75);
+      border-top: 4px solid @pre-ico ;
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -12px;
+        left: 0;
+        width: 100%;
+        height: 12px;
+        background-image: linear-gradient(180deg, rgba(247, 152, 27, 0.3) 0%, rgba(247, 152, 27, 0) 100%);
+        z-index: 11;
+      }
+      //.timeline_event-type::before{
+      //  content: "";
+      //  position: relative;
+      //  display: inline-block;
+      //  vertical-align: middle;
+      //  width: 16px;
+      //  height: 16px;
+      //  bottom: 1px;
+      //  background-image: @img-clock-pre-iso;
+      //  background-position: center;
+      //  background-repeat: no-repeat;
+      //  background-size: contain;
+      //}
+    }
     &--start_ico {
+      position: relative;
+      background-color: rgba(69, 175, 54, 0.75);
+      border-top: 4px solid @start-ico ;
+      &::before {
+        content: '';
+        position: absolute;
+        bottom: -12px;
+        left: 0;
+        width: 100%;
+        height: 12px;
+        background-image: linear-gradient(180deg, rgba(69, 175, 54, 0.3) 0%, rgba(69, 175, 54, 0) 100%);
+        z-index: 11;
+      }
+      //.timeline_event-type::before{
+      //  content: "";
+      //  position: relative;
+      //  display: inline-block;
+      //  vertical-align: middle;
+      //  width: 16px;
+      //  height: 16px;
+      //  bottom: 1px;
+      //  background-image: @img-clock-iso-start;
+      //  background-position: center;
+      //  background-repeat: no-repeat;
+      //  background-size: contain;
+      //}
+    }
+    &--ICO {
       position: relative;
       background-color: rgba(69, 175, 54, 0.75);
       border-top: 4px solid @start-ico ;
