portfolio, without charts

--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -228,7 +228,25 @@ fieldset {
   }
 }
 
-
+.tooltip.custom{
+  .arrow::before{
+    border-right-color: #ffffff;
+  }
+  .tooltip-inner{
+    max-width: 320px;
+    text-align: left;
+    padding: 8px;
+    box-shadow: -8px 8px 24px rgba(0, 0, 0, 0.2);
+    border: 1px solid #e0e6ed;
+    border-left: none;
+    background-color: #ffffff;
+    color: #525c6c;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 12px;
+  }
+}
 
 //===================checkbox=======================
 label {
