--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -85,10 +85,7 @@
 @img-message-small: data-uri('../img/message-small.svg');
 @img-delete-icon: data-uri('../img/delete-icon.svg');
 @img-green-bell: data-uri('../img/green-bell.svg');
-@img-grey-bell: data-uri('../img/grey-bell.svg');
 @img-green-comment: data-uri('../img/green-comment.svg');
-@img-grey-comment: data-uri('../img/grey-comment.svg');
-
 @img-graph: data-uri('../img/graph.svg');
 @img-www: data-uri('../img/www.svg');
 @img-tooltip: data-uri('../img/tooltip.svg');
@@ -130,7 +127,6 @@
 @img-coin: data-uri('../img/coin.svg');
 @img-sold: data-uri('../img/sold.svg');
 @img-bought: data-uri('../img/bought.svg');
-@img-swapped: data-uri('../img/swapped.svg');
 @img-edit-green: data-uri('../img/edit-green.svg');
 @img-delete-grey: data-uri('../img/delete-grey.svg');
 //@img-your-review: data-uri('../img/your-review.svg');
@@ -145,29 +141,27 @@
 @img-share: data-uri('../img/share.svg');
 @img-star: data-uri('../img/star.svg');
 @img-star-active: data-uri('../img/star_active.svg');
+@img-tumbler-inactive: data-uri('../img/tumbler-inactive.svg');
+@img-tumbler-active: data-uri('../img/tumbler-active.svg');
+@img-message-icon-green: data-uri('../img/message-icon-green.svg');
+@img-usersrating-icon: data-uri('../img/usersrating-icon.svg');
+@img-comments-small: data-uri('../img/comments-small.svg');
+@img-star-small: data-uri('../img/star-small.svg');
+@img-btc-icon: data-uri('../img/btc-icon.svg');
+@img-btc-icon: data-uri('../img/btc-icon.svg');
+@img-swap: data-uri('../img/swap.svg');
+@img-calendar-btn-icon: data-uri('../img/calendar-btn-icon.svg');
+@img-added-small-icon: data-uri('../img/added-small-icon.svg');
+@img-eye-grey: data-uri('../img/eye-grey.svg');
+@img-close: data-uri('../img/close.svg');
+@img-eye-blind: data-uri('../img/eye-blind.svg');
+@img-sign-up-success: data-uri('../img/sign-up-success.svg');
+@img-comment-img: data-uri('../img/comment-img.svg');
+@img-profile-icon: data-uri('../img/profile-icon.svg');
 
-/* diff from repo */
-@img-clock-end: data-uri('../img/clock_end.svg');
-@img-clock-start: data-uri('../img/clock_start.svg');
+//======================SPRITES==================//
+@img-user-pop: data-uri('../img/user-pop.svg');
 
-@img-clock-iso-end: data-uri('../img/clock_ico_end.svg');
-@img-clock-iso-start: data-uri('../img/clock_ico_start.svg');
-@img-clock-KYC: data-uri('../img/clock_KYC.svg');
-@img-clock-white-list: data-uri('../img/clock_white_list.svg');
-@img-clock-pre-iso: data-uri('../img/clock_KYC.svg');
-
-@img-view_1: data-uri('../img/view_1.svg');
-@img-view_1-active: data-uri('../img/view_1_active.svg');
-@img-view_2: data-uri('../img/view_2.svg');
-@img-view_2-active: data-uri('../img/view_2_active.svg');
-
-@img-sync: data-uri('../img/sync.svg');
-
-@img-calendar-white: data-uri('../img/calendar_white.svg');
-@img-calendar-approved: data-uri('../img/calendar_approved.svg');
-@img-bell-white: data-uri('../img/bell_white.svg');
-
-@img-trash: data-uri('../img/trash.svg');
 
 //@img-aurora-logo: data-uri('../img/aurora-logo.svg');
 
@@ -241,3 +235,29 @@
   font-style: normal;
   font-weight: normal;
 }
+
+/* diff from repo */
+@img-swapped: data-uri('../img/swapped.svg');
+@img-grey-bell: data-uri('../img/grey-bell.svg');
+@img-grey-comment: data-uri('../img/grey-comment.svg');
+@img-clock-end: data-uri('../img/clock_end.svg');
+@img-clock-start: data-uri('../img/clock_start.svg');
+
+@img-clock-iso-end: data-uri('../img/clock_ico_end.svg');
+@img-clock-iso-start: data-uri('../img/clock_ico_start.svg');
+@img-clock-KYC: data-uri('../img/clock_KYC.svg');
+@img-clock-white-list: data-uri('../img/clock_white_list.svg');
+@img-clock-pre-iso: data-uri('../img/clock_KYC.svg');
+
+@img-view_1: data-uri('../img/view_1.svg');
+@img-view_1-active: data-uri('../img/view_1_active.svg');
+@img-view_2: data-uri('../img/view_2.svg');
+@img-view_2-active: data-uri('../img/view_2_active.svg');
+
+@img-sync: data-uri('../img/sync.svg');
+
+@img-calendar-white: data-uri('../img/calendar_white.svg');
+@img-calendar-approved: data-uri('../img/calendar_approved.svg');
+@img-bell-white: data-uri('../img/bell_white.svg');
+
+@img-trash: data-uri('../img/trash.svg');
