--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -129,7 +129,7 @@
 @img-bought: data-uri('../img/bought.svg');
 @img-edit-green: data-uri('../img/edit-green.svg');
 @img-delete-grey: data-uri('../img/delete-grey.svg');
-//@img-your-review: data-uri('../img/your-review.svg');
+@img-your-review: data-uri('../img/your-review.svg');
 @img-heart-white: data-uri('../img/heart-white.svg');
 @img-calendar-input-icon: data-uri('../img/calendar-input-icon.svg');
 @img-gr: data-uri('../img/gr.svg');
