calendar layout fix.

--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -296,3 +296,4 @@
 @img-bell-white: data-uri('../img/bell_white.svg');
 
 @img-trash: data-uri('../img/trash.svg');
+@img-plus_2: data-uri('../img/plus_2.svg');
