Portfolio layout without donut and fixes.

--- a/src/assets/less/vars.less
+++ b/src/assets/less/vars.less
@@ -223,12 +223,9 @@
 /* font-family: "RobotoMedium"; */
 @font-face {
   font-family: "Roboto Medium";
-  src: url("@{path-fonts}/RobotoMedium/RobotoMedium.eot");
-  src: url("@{path-fonts}/RobotoMedium/RobotoMedium.eot?#iefix")format("embedded-opentype"),
-  url("@{path-fonts}/RobotoMedium/RobotoMedium.woff") format("woff"),
-  url("@{path-fonts}/RobotoMedium/RobotoMedium.ttf") format("truetype");
+  src: url("@{path-fonts}/RobotoMedium/RobotoMedium.ttf") format("truetype");
   font-style: normal;
-  font-weight: 500;
+  font-weight: normal;
 }
 /* font-family: "RobotoBold"; */
 @font-face {
@@ -297,3 +294,4 @@
 
 @img-trash: data-uri('../img/trash.svg');
 @img-plus_2: data-uri('../img/plus_2.svg');
+@img-dropdown-portfolio-opened: data-uri('../img/dropdown-portfolio-opened.svg');
