Layout fix,bug fix.

--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -23,6 +23,8 @@ body {
 }
 .container-fluid {
   max-width: 1280px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 ul,li {
   list-style: none;
@@ -539,6 +541,7 @@ label.checkbox input[type=checkbox]:checked + .ending_ico::after {
 .popover {
   max-width: 350px !important;
   border: none!important;
+  border-radius: 0;
   & .arrow{
     &::before{
       border: none!important;
