event types rename

--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -285,19 +285,19 @@ label.checkbox input[type=checkbox]:checked + span::after {
   background-position: center;
   z-index: 33;
 }
-label.checkbox input[type=checkbox]:checked + .white_list::after {
+label.checkbox input[type=checkbox]:checked + .whitelist::after {
   background-image: @img-pink-checkbox;
 }
-label.checkbox input[type=checkbox]:checked + .KYC::after {
+label.checkbox input[type=checkbox]:checked + .kyc::after {
   background-image: @img-blue-checkbox;
 }
-label.checkbox input[type=checkbox]:checked + .pre_ico::after {
+label.checkbox input[type=checkbox]:checked + .pre::after {
   background-image: @img-orange-checkbox;
 }
-label.checkbox input[type=checkbox]:checked + .start_ico::after {
+label.checkbox input[type=checkbox]:checked + .start::after {
   background-image: @img-checkbox;
 }
-label.checkbox input[type=checkbox]:checked + .ending_ico::after {
+label.checkbox input[type=checkbox]:checked + .end::after {
   background-image: @img-purple-checkbox;
 }
 
