--- a/src/assets/less/app.less
+++ b/src/assets/less/app.less
@@ -214,6 +214,9 @@ fieldset {
 
 .tooltip.custom{
   pointer-events: none;
+  .arrow{
+    bottom: 1px;
+  }
   &.bs-tooltip-top{
      .arrow::before{
        border-top-color: #ffffff!important;
